2005-10-21 Kimmo
 PATCH: [ 1333545 ] Small improvement to Open-dialog folder selection
  Src: OpenDlg.cpp
 PATCH: [ 1333581 ] Increase quick compare limit and make it option
  Src: DiffContext.h DiffWrapper.cpp DirDoc.cpp OptionsDef.h OptionsInit.cpp

2005-10-20 Tim
 PATCH: [ 1330179 ] Icon for 'Print'
  Src: MainFrm.cpp Merge.rc resource.h
  Src/res new file: print.bmp
  Src/Languages: *.rc resource.h
  Src/Languages/res new file: print.bmp

2005-10-20 Kimmo
 PATCH: [ 1332365 ] Make some DirActions.cpp functions consts
  Src: DirActions.cpp DirView.h

2005-10-19 Kimmo
 PATCH: [ 1329951 ] Readme.txt points to version 2.2 manual
  Docs/Users: ReadMe.txt
  Docs/Users/Languages: ReadMe-Catalan.txt ReadMe-Swedish.txt
 BUG: [ 1326621 ] Extention ".WinMerge" is omitted
  Src: OpenDlg.cpp

2005-10-18 Tim
 PATCH: [ 1330059 ] Translated 3 missing sentences to German
  Src/Languages/German: MergeGerman.rc

2005-10-15 Perry
 PATCH: [ 1326813 ] Fix binary detection to allow archives
  Src: DirView.cpp

2005-10-13 Kimmo
 PATCH: [ 1305541 ] Rational ClearCase support
  Submitted by Greg (rys1908)
  Src: CCPrompt.cpp CCprompt.h DirActions.cpp MainFrm.cpp MainFrm.h Merge.rc resource.h
  Src/Common: coretools.cpp
  Src/Languages: *.rc resource.h

2005-10-12 Kimmo
 PATCH: [ 1323107 ] Patch for crash on save filenames with different cases
  From anonymous submitter
  Src: DirDcoc.cpp
 PATCH: [ 1286629 ] print support
  Submitted by Markus Rollmann
  Src: MainFrm.cpp Merge.rc MergeEditView.cpp MergeEditView.h
  Src/Common: SplitterWndEx.cpp SplitterWndEx.h
  Src/editlib: ccrystaleditview.cpp
  Src/Languages: *.rc
 Add Markus Rollmann to Contributors.txt
  Docs/Users/Contributors.txt

2005-10-05 Perry
 PATCH: [ 1242008 ] Update status to binary if open fails because binary
  Follow on for 2nd case
 Src: DirView.cpp MergeDoc.cpp

2005-10-03 Perry
 PATCH: [ 1302710 ] generating a report is slow
  Perry added comments explaining one code line
  Src: DirCmpReport.cpp

2005-10-03 Kimmo