@@ -1,3 +1,8 @@
+2005-10-23 Perry
+ PATCH: [ 1334484 ] Skip location view paint if buffer not initialized
+  Src: LocationView.cpp MergeDoc.cpp MergeDoc.h
+   MergeEditView.cpp MergeEditView.h
+
 2005-10-21 Kimmo
  PATCH: [ 1333545 ] Small improvement to Open-dialog folder selection
   Src: OpenDlg.cpp
